[project]
name = "cognitodarkmatter"
version = "1.0.0"
description = "OpenEnv Project"
authors = [{name = "Shanmukheswar"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"