[project]
name = "cognitodarkmatter"
version = "1.0.0"
description = "OpenEnv Project"
authors = [{name = "Shanmukheswar"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0",
    "requests"
]